# UAM-RTOS_ver1.1

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  commit_log.txt  main_newmodule.cpp
app/: app_shared.h  main.c  tasks_comms.c  tasks_comms.h  tasks_control.c  tasks_control.h  tasks_estimator.c  tasks_estimator.h  tasks_health.c  tasks_health.h  tasks_logger.c  tasks_logger.h  tasks_sensor.c  tasks_sensor.h  uam_messages.c  uam_messages.h
docs/: architecture.md
kernel/: rtos.c  rtos.h
scripts/: run_demo.sh
sync/: event_flags.c  event_flags.h  mutex.c  mutex.h  queue.c  queue.h
